# RecruBotX

./: .env.example  .gitignore  MONGODB_AUTH_SETUP.md  README.md  README_DEPLOY.md  RECRUITER_AUTH_IMPLEMENTATION.md  RECRUITER_SYSTEM_DOCUMENTATION.md  RESUME_PDF_FEATURE_GUIDE.md  RESUME_PDF_IMPLEMENTATION.md  VOICE_INTERVIEW_CV_UPLOAD.md  deploy.sh  docker-compose.yml  render.yaml  start-mongodb.bat
Backend/: .dockerignore  .env  .env.example  .gitignore  DATABASE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MONGODB_DNS_FIX.md  README.md  SETUP_CHECKLIST.md  VOICE_INTERVIEW_CV_FEATURE.md  clear_indexes.py  jobs.json  main.py  pyproject.toml  quick_setup.py  requirements.txt  start_server.ps1  test_cv_feature.py  verify_cv_upload.py  verify_full_flow.py  verify_initiate.py  verify_jobs_all.py  verify_reports.py  view_candidate_data.py
Backend/api/: advertisement_routes.py  auth_middleware.py  auth_utils.py  cv_screener.py  interview_routes.py  job_posting_routes.py  ranking_routes.py  recruiter_routes.py  routes.py  superuser_routes.py  superuser_ws.py  websocket_routes.py
Backend/com_vision_agent/: Engagement.py  requirements.txt
Backend/cv_screener/: README.md  __init__.py  cv_extractor.py  cv_parser.py  embedding.py  examples.py  gemini_screener.py  matcher.py  parsed_cv.json  pdf_parser.py  retriever.py
Backend/database/: COLLECTIONS_SCHEMA.md  activity_log_model.py  connection.py  crud.py  cv_screener.py  db.py  init_collections.py  init_dummy_users.py  init_interview_cvs_collection.py  init_superuser.py  job_posting_crud.py  job_posting_model.py  models.py  ranking_crud.py  ranking_models.py  (+3 more)
(+159 files in other folders)
