[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.116.2",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "uvicorn>=0.36.0",
]
