[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "coqui-tts>=0.27.2",
    "datasets>=4.1.1",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.116.2",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "librosa>=0.11.0",
    "numpy>=1.24.0",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "sentence-transformers>=5.1.0",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.36.0",
]
